<resources>
        <string name="send">寄件</string>
        <string name="text_editor_password">修改密码</string>
        <string name="text_now_password">旧密码</string>
        <string name="text_new_password">新密码</string>
        <string name="text_password_again">再次输入密码</string>
        <string name="text_forget_password">忘记密码</string>
        <string name="text_email">邮箱</string>
        <string name="receive">收件</string>
        <string name="app_name">快递管家</string>
        <string name="command_value_hidden">{HIDDEN}</string>
        <string name="address_name">请填写收货人姓名</string>
        <string name="address_detail_name">请填写详细地址</string>
        <string name="address_postcode">如: 311100</string>
        <string name="avoid">禁忌物品</string>
        <string name="pay">运费查询</string>
        <string name="select">快递选择</string>
        <string name="web">网点查询</string>
        <string name="leavemessage">寄件留言</string>
        <string name="text_registered_failure">注册失败：</string>
        <string name="text_registered_successful">注册成功</string>
        <string name="home">首页</string>
        <string name="center">个人中心</string>
        <string name="input_your_courier_number">请输入快递单号</string>
        <string name="btn_query">查询</string>
        <string name="searchResult">查询快递</string>
        <string name="wait_receive">待收件</string>
        <string name="receive_all">已签收</string>
        <string name="scan_result">扫描结果</string>
        <string name="receiveManger">收件管理</string>
        <string name="text_unknown">未知</string>
        <string name="text_login">登陆</string>
        <string name="text_registered">注册</string>
        <string name="text_keep_password">记住密码</string>
        <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>
        <string name="text_user_name">用户名</string>
        <string name="text_ages">年龄</string>
        <string name="text_nothing">这个人很懒，什么都没有留下！</string>
        <string name="text_tost_empty">输入框不能为空</string>
        <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
        <string name="text_desc">简介</string>
        <string name="text_password">密码</string>
        <string name="text_boy">男</string>
        <string name="text_girl">女</string>
        <string name="dingdan_manage">订单管理</string>
        <string name="shoujian_address">收件地址</string>
        <string name="mymessage">我的消息</string>
        <string name="myshoucang">我的收藏</string>
        <string name="updateset">更新设置</string>
        <string name="clean">清理缓存</string>
        <string name="otherset">其他设置</string>
        <string name="mainpage">首页</string>
        <string name="shoujian">收件</string>
        <string name="jijian">寄件</string>
        <string name="headperson">头像</string>
        <string name="persondata">个人中心</string>
        <string name="my_persondata">我的资料</string>
        <string name="save">保存</string>
        <string name="birthday">生日</string>
        <string name="sex">性别</string>
        <string name="telephone">联系电话</string>
        <string name="region">地区</string>
        <string name="nicheng">昵称</string>
        <string name="otherinformation">其他信息</string>
        <string name="companyname">企业名称</string>
        <string name="completeaddress">具体地址</string>
        <string name="notsetting">未设置</string>
        <string name="choose_company">请选择快递公司名称</string>
        <string name="shoujianren_information">请输入收件人详细信息</string>
        <string name="object">物品</string>
        <string name="jijian_menthod">寄件方式</string>
        <string name="kuaidiyuan_shoujian">快递员上门收件</string>
        <string name="message_remark">留言备注</string>
        <string name="yuyue_jijian">预约寄件</string>
        <string name="upload">提交</string>
        <string name="agree_protocol">我同意《电子运单保密协定》</string>
        <string name="prohibit_object">禁忌物品查询</string>

</resources>

