<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke">

    <TableLayout
        android:background="@drawable/bottomframeboder"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TableRow android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/getback"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/getback_left" />

            <TextView
                android:paddingTop="5dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="3dp"
                android:text="@string/send"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/choose_company"
            android:orientation="horizontal"
            android:background="@color/white">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:background="@drawable/company_main"
                android:layout_marginLeft="20dp"/>
            <EditText
                android:text="@string/choose_company"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16dp"/>
            <ImageButton
                android:background="@drawable/getback_right"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="75dp"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/shoujianren_information"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/jijian1" />
            <EditText
                android:text="@string/shoujianren_information"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16dp"/>
            <ImageButton
                android:background="@drawable/getback_right"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="75dp"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:textSize="16dp"
                android:text="@string/object"
                android:textColor="@color/gray"/>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:text="文件  1.0kg"/>
            <ImageButton
                android:background="@drawable/getback_right"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="75dp"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white">

        <TableRow>
            <TextView
                android:text="@string/jijian_menthod"
                android:textColor="@color/gray"
                android:textSize="16dp"
                android:layout_marginLeft="68dp"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
            <TextView
                android:text="@string/kuaidiyuan_shoujian"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginLeft="60dp"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageButton
                android:id="@+id/id_leavemessage"
                android:background="@drawable/kuaidiyuan"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="80dp"/>

            <ImageButton
                android:layout_width="51dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/yuyue" />

        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/message_remark"
                android:textSize="16dp"
                android:textColor="@color/gray"
                android:layout_marginLeft="80dp"/>

            <TextView
                android:text="@string/yuyue_jijian"
                android:textColor="@color/gray"
                android:textSize="16dp"
                android:layout_marginLeft="85dp"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="272dp"
            android:layout_height="match_parent"
            android:background="@color/gray_cc"
            android:gravity="center"
            android:text="@string/agree_protocol"
            android:textSize="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="0dp"
            android:background="#FF589983"
            android:text="@string/upload" />


    </LinearLayout>
</LinearLayout>