<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_searchlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imooc.searchResult.SearchActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/deepskyblue">
        <ImageButton
            android:id="@+id/back2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@mipmap/back"
            android:scaleType="centerCrop"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/deepskyblue"
            android:text="@string/searchResult"
            android:layout_marginLeft="125dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="8"/>
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <EditText
                android:id="@+id/postid"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@layout/edit_bg"
                android:hint="@string/input_your_courier_number"
                android:layout_height="35dp" />

            <!--android:entries="@array/kdcompany"-->
            <Spinner
                android:id="@+id/spinner"
                android:entries="@array/kdcompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/btn"
            android:text="@string/btn_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
</LinearLayout>
